--- a/src/sass/components/hero/_title.scss
+++ b/src/sass/components/hero/_title.scss
@@ -1,14 +1,25 @@
+
 .m-hero-title {
   color: var(--titles-color);
   letter-spacing: 0.4px;
   line-height: 1.3;
   font-size: 1.750rem;
   font-weight: 700;
-  margin: 0 0 15px;
+  margin: 0 0 20px;
 
   @include respond-to('medium') {
     letter-spacing: 0.5px;
     font-size: 2.250rem;
+  }
+
+  &.img {
+    display: inline;
+  }
+
+  &.img img {
+    max-width: 90%;
+    height: auto;
+    margin-bottom: 20px;
   }
 
   &.bigger {
@@ -18,7 +29,7 @@
     @include respond-to('medium') {
       letter-spacing: 0.8px;
       font-size: 3.250rem;
-      margin-bottom: 10px;
+      margin-bottom: 20px;
     }
   }
 }
