--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -6,64 +6,70 @@
   overflow: hidden !important;
   height: 350px;
   margin: -40px -20px 40px;
-  -webkit-transition: all 0.25s cubic-bezier(0.02, 0.01, 0.47, 1);
-  -moz-transition: all 0.25s cubic-bezier(0.02, 0.01, 0.47, 1);
-  -o-transition: all 0.25s cubic-bezier(0.02, 0.01, 0.47, 1);
-  -ms-transition: all 0.25s cubic-bezier(0.02, 0.01, 0.47, 1);
-  transition: all 0.25s cubic-bezier(0.02, 0.01, 0.47, 1); }
-  @media only screen and (min-width: 48rem) {
-    .m-featured-slider:hover {
-      -moz-transform: translateY(-5px);
-      -ms-transform: translateY(-5px);
-      -o-transform: translateY(-5px);
-      transform: translateY(-5px);
-      -moz-box-shadow: var(--article-shadow-hover), 0 0 0 transparent;
-      -webkit-box-shadow: var(--article-shadow-hover), 0 0 0 transparent;
-      box-shadow: var(--article-shadow-hover), 0 0 0 transparent; } }
-  @media only screen and (min-width: 48rem) {
-    .m-featured-slider {
-      width: 100%;
-      height: 420px;
-      margin: -40px 10px 20px 10px;
-      border-radius: 5px; } }
-  @media only screen and (min-width: 64rem) {
-    .m-featured-slider {
-      width: calc(100% - (100% / 3) - 40px);
-      margin: 0 20px 40px 20px;
-      overflow: unset; } }
+  transition: all 0.25s cubic-bezier(0.02, 0.01, 0.47, 1);
+}
+@media only screen and (min-width: 48rem) {
+  .m-featured-slider:hover {
+    transform: translateY(-5px);
+    box-shadow: var(--article-shadow-hover), 0 0 0 transparent;
+  }
+}
+@media only screen and (min-width: 48rem) {
+  .m-featured-slider {
+    width: 100%;
+    height: 420px;
+    margin: -40px 10px 20px 10px;
+    border-radius: 10px;
+  }
+}
+@media only screen and (min-width: 64rem) {
+  .m-featured-slider {
+    width: calc(100% - (100% / 3) - 40px);
+    margin: 0 20px 40px 20px;
+    overflow: unset;
+  }
+}
 
 .m-featured-slider:not(:root:root) {
-  overflow: hidden !important; }
+  overflow: hidden !important;
+}
 
 .m-featured-slider__list {
   list-style-type: none;
   padding: 0;
   margin: 0;
-  height: 100%; }
-  @media only screen and (min-width: 48rem) {
-    .m-featured-slider__list {
-      border-radius: 5px;
-      overflow: hidden; } }
+  height: 100%;
+}
+@media only screen and (min-width: 48rem) {
+  .m-featured-slider__list {
+    border-radius: 10px;
+    overflow: hidden;
+  }
+}
 
 .m-featured-slider__list__item {
   height: 100%;
-  overflow: hidden; }
-  @media only screen and (min-width: 48rem) {
-    .m-featured-slider__list__item {
-      border-radius: 5x; } }
+  overflow: hidden;
+}
+@media only screen and (min-width: 48rem) {
+  .m-featured-slider__list__item {
+    border-radius: 10px;
+  }
+}
 
 .m-featured-article {
   position: relative;
   height: 100%;
   overflow: hidden;
   background-color: var(--primary-subtle-color);
-  z-index: 1; }
-  .m-featured-article:hover .m-featured-article__author {
-    -moz-box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3), 0 0 0 transparent;
-    -webkit-box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3), 0 0 0 transparent;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3), 0 0 0 transparent; }
-  .m-featured-article.no-picture .m-featured-article__picture {
-    background-color: var(--primary-subtle-color); }
+  z-index: 1;
+}
+.m-featured-article:hover .m-featured-article__author {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3), 0 0 0 transparent;
+}
+.m-featured-article.no-picture .m-featured-article__picture {
+  background-color: var(--primary-subtle-color);
+}
 
 .m-featured-article__picture {
   position: absolute;
@@ -72,32 +78,40 @@
   width: 100%;
   height: 100%;
   background-color: #000;
-  z-index: 1; }
-  .m-featured-article__picture div {
-    width: 100%;
-    height: 100%;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    opacity: 0.7; }
+  z-index: 1;
+}
+.m-featured-article__picture div {
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  opacity: 0.7;
+}
 
 .m-featured-article__meta {
   position: absolute;
   top: 20px;
   left: 20px;
-  z-index: 4; }
-  @media only screen and (min-width: 48rem) {
-    .m-featured-article__meta {
-      top: 40px;
-      left: 40px; } }
+  z-index: 4;
+}
+@media only screen and (min-width: 48rem) {
+  .m-featured-article__meta {
+    top: 40px;
+    left: 40px;
+  }
+}
 
 .rtl .m-featured-article__meta {
   left: auto;
-  right: 20px; }
-  @media only screen and (min-width: 48rem) {
-    .rtl .m-featured-article__meta {
-      left: auto;
-      right: 40px; } }
+  right: 20px;
+}
+@media only screen and (min-width: 48rem) {
+  .rtl .m-featured-article__meta {
+    left: auto;
+    right: 40px;
+  }
+}
 
 .m-featured-article__author {
   display: block;
@@ -107,24 +121,23 @@
   border: 2px solid #fff;
   border-radius: 50%;
   margin-bottom: 20px;
-  -webkit-transition: all 0.25s cubic-bezier(0.02, 0.01, 0.47, 1);
-  -moz-transition: all 0.25s cubic-bezier(0.02, 0.01, 0.47, 1);
-  -o-transition: all 0.25s cubic-bezier(0.02, 0.01, 0.47, 1);
-  -ms-transition: all 0.25s cubic-bezier(0.02, 0.01, 0.47, 1);
-  transition: all 0.25s cubic-bezier(0.02, 0.01, 0.47, 1); }
-  .m-featured-article__author div {
-    width: 100%;
-    height: 100%;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    border-radius: 50%; }
+  transition: all 0.25s cubic-bezier(0.02, 0.01, 0.47, 1);
+}
+.m-featured-article__author div {
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  border-radius: 50%;
+}
 
 .m-featured-article__tag {
   color: #fff;
   letter-spacing: 0.3px;
   font-weight: 700;
-  font-size: 1rem; }
+  font-size: 1rem;
+}
 
 .m-featured-article__ribbon {
   display: flex;
@@ -138,41 +151,55 @@
   color: #000;
   background-color: #fff;
   border-radius: 50%;
-  z-index: 2; }
-  @media only screen and (min-width: 48rem) {
-    .m-featured-article__ribbon {
-      justify-content: flex-start;
-      top: 47px;
-      right: 40px;
-      width: auto;
-      height: 22px;
-      padding: 0 7px;
-      font-size: 0.875rem;
-      font-weight: 600;
-      border-radius: 5px; } }
-  .m-featured-article__ribbon span {
-    display: inline-block; }
-  @media only screen and (min-width: 48rem) {
-    .m-featured-article__ribbon span:first-of-type {
-      font-size: 0.750rem;
-      margin-right: 4px; } }
+  z-index: 2;
+}
+@media only screen and (min-width: 48rem) {
+  .m-featured-article__ribbon {
+    justify-content: flex-start;
+    top: 47px;
+    right: 40px;
+    width: auto;
+    height: 22px;
+    padding: 0 7px;
+    font-size: 0.875rem;
+    font-weight: 600;
+    border-radius: 15px;
+  }
+}
+.m-featured-article__ribbon span {
+  display: inline-block;
+}
+@media only screen and (min-width: 48rem) {
+  .m-featured-article__ribbon span:first-of-type {
+    font-size: 0.75rem;
+    margin-right: 4px;
+  }
+}
+.m-featured-article__ribbon span:last-of-type {
+  display: none;
+}
+@media only screen and (min-width: 48rem) {
   .m-featured-article__ribbon span:last-of-type {
-    display: none; }
-    @media only screen and (min-width: 48rem) {
-      .m-featured-article__ribbon span:last-of-type {
-        display: block; } }
+    display: block;
+  }
+}
 
 .rtl .m-featured-article__ribbon {
   right: auto;
-  left: 20px; }
-  @media only screen and (min-width: 48rem) {
-    .rtl .m-featured-article__ribbon {
-      right: auto;
-      left: 40px; } }
-  @media only screen and (min-width: 48rem) {
-    .rtl .m-featured-article__ribbon span:first-of-type {
-      margin-right: 0;
-      margin-left: 4px; } }
+  left: 20px;
+}
+@media only screen and (min-width: 48rem) {
+  .rtl .m-featured-article__ribbon {
+    right: auto;
+    left: 40px;
+  }
+}
+@media only screen and (min-width: 48rem) {
+  .rtl .m-featured-article__ribbon span:first-of-type {
+    margin-right: 0;
+    margin-left: 4px;
+  }
+}
 
 .m-featured-article__content {
   display: flex;
@@ -182,10 +209,13 @@
   height: 100%;
   padding: 120px 20px 20px 20px;
   position: relative;
-  z-index: 3; }
-  @media only screen and (min-width: 48rem) {
-    .m-featured-article__content {
-      padding: 125px 40px 40px 40px; } }
+  z-index: 3;
+}
+@media only screen and (min-width: 48rem) {
+  .m-featured-article__content {
+    padding: 125px 40px 40px 40px;
+  }
+}
 
 .m-featured-article__title {
   color: #fff;
@@ -193,20 +223,23 @@
   line-height: 1.3;
   font-size: 1.625rem;
   font-weight: 600;
-  margin: 0; }
-  @media only screen and (min-width: 48rem) {
-    .m-featured-article__title {
-      letter-spacing: 0.5px;
-      font-size: 2.250em;
-      max-width: 80%; } }
+  margin: 0;
+}
+@media only screen and (min-width: 48rem) {
+  .m-featured-article__title {
+    letter-spacing: 0.5px;
+    font-size: 2.25em;
+    max-width: 80%;
+  }
+}
 
 .m-featured-article__timestamp {
   display: flex;
   align-items: center;
   color: #fff;
   letter-spacing: 0.2px;
-  font-size: 0.875rem; }
-  .m-featured-article__timestamp span:nth-child(2) {
-    padding: 0 10px; }
-
-/*# sourceMappingURL=home.css.map */
+  font-size: 0.875rem;
+}
+.m-featured-article__timestamp span:nth-child(2) {
+  padding: 0 10px;
+}
