--- a/src/css/tags.css
+++ b/src/css/tags.css
@@ -7,10 +7,14 @@
     flex-wrap: wrap;
     justify-content: center;
     margin: 0 auto;
-    max-width: 720px; } }
+    max-width: 720px;
+  }
+}
 @media only screen and (min-width: 64rem) {
   .l-tags-container {
-    max-width: 1080px; } }
+    max-width: 1080px;
+  }
+}
 
 .m-tag-card {
   height: 180px;
@@ -18,41 +22,32 @@
   position: relative;
   border-radius: 10px;
   border: 1px solid var(--secondary-border-color);
-  -webkit-transition: all 0.25s cubic-bezier(0.02, 0.01, 0.47, 1);
-  -moz-transition: all 0.25s cubic-bezier(0.02, 0.01, 0.47, 1);
-  -o-transition: all 0.25s cubic-bezier(0.02, 0.01, 0.47, 1);
-  -ms-transition: all 0.25s cubic-bezier(0.02, 0.01, 0.47, 1);
-  transition: all 0.25s cubic-bezier(0.02, 0.01, 0.47, 1); }
-  .m-tag-card:hover {
-    -moz-transform: translateY(-5px);
-    -ms-transform: translateY(-5px);
-    -o-transform: translateY(-5px);
-    transform: translateY(-5px); }
-    .m-tag-card:hover:before {
-      -moz-box-shadow: var(--article-shadow-hover), 0 0 0 transparent;
-      -webkit-box-shadow: var(--article-shadow-hover), 0 0 0 transparent;
-      box-shadow: var(--article-shadow-hover), 0 0 0 transparent; }
-  @media only screen and (min-width: 48rem) {
-    .m-tag-card {
-      width: 320px;
-      margin: 0 20px 40px; } }
-  .m-tag-card:before {
-    content: '';
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    bottom: 0;
-    left: 10px;
-    border-radius: 10px;
-    z-index: 1;
-    -moz-box-shadow: var(--article-shadow-normal), 0 0 0 transparent;
-    -webkit-box-shadow: var(--article-shadow-normal), 0 0 0 transparent;
-    box-shadow: var(--article-shadow-normal), 0 0 0 transparent;
-    -webkit-transition: all 0.25s cubic-bezier(0.02, 0.01, 0.47, 1);
-    -moz-transition: all 0.25s cubic-bezier(0.02, 0.01, 0.47, 1);
-    -o-transition: all 0.25s cubic-bezier(0.02, 0.01, 0.47, 1);
-    -ms-transition: all 0.25s cubic-bezier(0.02, 0.01, 0.47, 1);
-    transition: all 0.25s cubic-bezier(0.02, 0.01, 0.47, 1); }
+  transition: all 0.25s cubic-bezier(0.02, 0.01, 0.47, 1);
+}
+.m-tag-card:hover {
+  transform: translateY(-5px);
+}
+.m-tag-card:hover:before {
+  box-shadow: var(--article-shadow-hover), 0 0 0 transparent;
+}
+@media only screen and (min-width: 48rem) {
+  .m-tag-card {
+    width: 320px;
+    margin: 0 20px 40px;
+  }
+}
+.m-tag-card:before {
+  content: "";
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  bottom: 0;
+  left: 10px;
+  border-radius: 10px;
+  z-index: 1;
+  box-shadow: var(--article-shadow-normal), 0 0 0 transparent;
+  transition: all 0.25s cubic-bezier(0.02, 0.01, 0.47, 1);
+}
 
 .m-tag-card__link {
   display: block;
@@ -62,9 +57,11 @@
   overflow: hidden;
   position: relative;
   background-color: #000;
-  z-index: 2; }
-  .m-tag-card__link.no-picture {
-    background-color: var(--secondary-subtle-color); }
+  z-index: 2;
+}
+.m-tag-card__link.no-picture {
+  background-color: var(--secondary-subtle-color);
+}
 
 .m-tag-card__picture {
   position: absolute;
@@ -73,29 +70,33 @@
   width: 100%;
   height: 100%;
   border-radius: 10px;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   opacity: 0.7;
-  z-index: 1; }
+  z-index: 1;
+}
 
 .m-tag-card__info {
   position: absolute;
   left: 15px;
   bottom: 15px;
   color: #fff;
-  z-index: 2; }
-  .m-tag-card__info.no-picture {
-    color: var(--titles-color); }
+  z-index: 2;
+}
+.m-tag-card__info.no-picture {
+  color: var(--titles-color);
+}
 
 .m-tag-card__name {
   letter-spacing: 0.3px;
   line-height: 1.3;
   font-size: 1.25rem;
   font-weight: 600;
-  margin: 0 0 5px; }
+  margin: 0 0 5px;
+}
 
 .m-tag-card__counter {
   display: block;
   letter-spacing: 0.2px;
-  font-size: 0.875rem; }
-
-/*# sourceMappingURL=tags.css.map */
+  font-size: 0.875rem;
+}
